<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@color/colorPrimary"
    android:orientation="vertical"

    tools:context=".Login">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />


    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="@color/AttetszoFeher"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginName"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginHorizontal="30dp"
                android:background="@color/AttetszoFeher"
                android:hint="Username"
                android:visibility="gone" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/realName"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginHorizontal="30dp"
                android:background="@color/AttetszoFeher"
                android:hint="Teljes név"
                android:visibility="gone" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginHorizontal="30dp"
                android:layout_marginBottom="10dp"
                android:background="@color/AttetszoFeher"

                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginHorizontal="30dp"
                android:background="@color/AttetszoFeher"
                android:hint="@string/prompt_password"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/email_real_reg_button"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/login_button"
            android:text="@string/Registration"
            android:visibility="gone" />

        <Button
            android:id="@+id/email_sign_in_button"
            style="?android:textAppearanceSmall"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/login_button"
            android:text="@string/action_sign_in"
            android:textColor="#FFF"

            android:textStyle="bold" />

        <Button
            android:id="@+id/email_reg_button"
            style="?android:textAppearanceSmall"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/login_button"
            android:text="@string/Registration"
            android:textColor="#FFF"
            android:textStyle="bold" />

        <Button
            android:id="@+id/exit_button"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/login_button"
            android:text="@string/Exit"
            android:textColor="#FFF" />

    </LinearLayout>

</LinearLayout>