<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Main"
    tools:showIn="@layout/app_bar_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:text="@string/mittanul"
            android:textAlignment="center"
            android:textColor="#4286f4"
            android:textSize="30sp"
            android:textStyle="bold" />

        <com.google.android.flexbox.FlexboxLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            app:alignContent="flex_start"
            app:alignItems="flex_start"
            app:flexWrap="wrap"
            app:justifyContent="center">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/btn_nyelvtan"
                    style="@style/Widget.AppCompat.ImageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:adjustViewBounds="true"
                    android:background="@drawable/roundedbutton"
                    android:contentDescription="@string/nyelvtan"
                    app:srcCompat="@drawable/nyelvtan" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Nyelvtan"
                    android:textColor="#4286f4"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </androidx.appcompat.widget.LinearLayoutCompat>
            <ImageButton
                android:id="@+id/btn_biologia"
                style="@style/Widget.AppCompat.ImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:adjustViewBounds="true"
                android:background="@drawable/roundedbutton"
                android:contentDescription="@string/biologia"
                app:srcCompat="@drawable/kor80x80" />

            <ImageButton
                android:id="@+id/btn_informatika"
                style="@style/Widget.AppCompat.ImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:adjustViewBounds="true"
                android:background="@drawable/roundedbutton"
                android:contentDescription="@string/info"
                app:srcCompat="@drawable/kor80x80" />

            <ImageButton
                android:id="@+id/btn_matek"
                style="@style/Widget.AppCompat.ImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/roundedbutton"
                android:contentDescription="@string/matek"
                app:srcCompat="@drawable/matek" />

            <ImageButton
                android:id="@+id/btn_nyelvtan2"
                style="@style/Widget.AppCompat.ImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:adjustViewBounds="true"
                android:background="@drawable/roundedbutton"
                android:contentDescription="@string/nyelvtan"
                app:srcCompat="@drawable/nyelvtan" />

            <ImageButton
                android:id="@+id/btn_nyelvtan3"
                style="@style/Widget.AppCompat.ImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:adjustViewBounds="true"
                android:background="@drawable/roundedbutton"
                android:contentDescription="@string/nyelvtan"
                app:srcCompat="@drawable/nyelvtan" />
        </com.google.android.flexbox.FlexboxLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>